--- a/frontend/todo-app/src/App.css
+++ b/frontend/todo-app/src/App.css
@@ -1,8 +1,8 @@
 .footer {
-  position: absolute;
+  position: fixed;
   bottom: 0px;
   width: 100%;
-  height: 40px;
+  height: 50px;
   background-color: #222222;
 }
 
