moved nav to sidebar

--- a/frontend/todo-app/src/Bootstrap.css
+++ b/frontend/todo-app/src/Bootstrap.css
@@ -6512,7 +6512,7 @@ textarea.form-control-lg {
 }
 
 .fixed-bottom {
-  position: fixed;
+  position: absolute;
   right: 0;
   bottom: 0;
   left: 0;
