--- a/frontend/todo-app/src/Bootstrap.css
+++ b/frontend/todo-app/src/Bootstrap.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Share+Tech&display=swap');
 /*!
  * Bootstrap v5.1.2 (https://getbootstrap.com/)
- * Copyright 2011-2021 The Bootstrap Authors
+ * Copyright 2011-2021 The Bootstrap Authorsack
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
@@ -57,7 +57,7 @@
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
   --bs-body-color: #ffffff;
-  --bs-body-bg: rgb(0, 0, 0);
+  --bs-body-bg: rgb(255, 255, 255);
 }
 
 *,
@@ -4644,6 +4644,10 @@ textarea.form-control-lg {
   .card-group > .card:not(:first-child) .card-img-bottom,
 .card-group > .card:not(:first-child) .card-footer {
     border-bottom-left-radius: 0;
+  }
+  .card:hover {
+    transform: scale(1.03);
+    box-shadow: 0 13px 40px -5px hsla(240, 30.1%, 28%, 0.12), 0 8px 32px -8px hsla(0, 0%, 0%, 0.14), 0 -6px 32px -6px hsla(0, 0%, 0%, 0.02);
   }
 }
 
@@ -11266,5 +11270,6 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+
 
 /*# sourceMappingURL=bootstrap.css.map */
