--- a/frontend/todo-app/src/Bootstrap.css
+++ b/frontend/todo-app/src/Bootstrap.css
@@ -57,7 +57,7 @@
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
   --bs-body-color: #ffffff;
-  --bs-body-bg: rgb(255, 255, 255);
+  --bs-body-bg: rgb(218, 218, 218);
 }
 
 *,
@@ -74,6 +74,7 @@
 
 body {
   margin: 0;
+  
   font-family: var(--bs-body-font-family);
   font-size: var(--bs-body-font-size);
   font-weight: var(--bs-body-font-weight);
@@ -84,6 +85,8 @@ body {
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+
+
 
 hr {
   margin: 1rem 0;
@@ -106,6 +109,11 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1, h0 ,.h0 {
 }
 h0, .h0{
   font-size: 5rem;
+}
+@media (min-width: 1200px) {
+  h0, .h0 {
+    font-size: 5rem;
+  }
 }
 
 h1, .h1 {
