--- a/frontend/todo-app/src/Bootstrap.css
+++ b/frontend/todo-app/src/Bootstrap.css
@@ -91,7 +91,28 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+h1.cg1p-header {
+  color: #000;
+  font-size: 50px;
+  font-weight: 200;
+}
 
+h2.cg1p-header {
+  color: #000;
+  font-size: 30px;
+  font-weight: 200;
+}
+
+.cg1p-p {
+
+}
+
+.cg1p-logo h4 {
+  color: white;
+  text-transform: uppercase;
+  font-weight: 200;
+  letter-spacing: 2px;
+}
 
 hr {
   margin: 1rem 0;
@@ -122,8 +143,7 @@ h0, .h0{
 }
 
 h1, .h1 {
-  font-size: calc(1.375rem + 1.5vw);
-  
+  font-size: calc(1.375rem + 2vw);
 }
 @media (min-width: 1200px) {
   h1, .h1 {
@@ -3942,7 +3962,7 @@ textarea.form-control-lg {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
-  color: #0d6efd;
+  color: #000;
   text-decoration: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
@@ -4515,8 +4535,10 @@ textarea.form-control-lg {
   word-wrap: break-word;
   background-color: #fff;
   background-clip: border-box;
-  border: 2px solid rgba(0, 0, 0, 0.3);
-  border-radius: 0.0em;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 0.5em;
+  padding: 20px;
+  text-align: left;
 }
 .card > hr {
   margin-right: 0;
