more frontend touchups

--- a/frontend/todo-app/src/Bootstrap.css
+++ b/frontend/todo-app/src/Bootstrap.css
@@ -720,6 +720,7 @@ progress {
 
 .col {
   flex: 1 0 0%;
+  padding: 0;
 }
 
 .row-cols-auto > * {
@@ -2223,7 +2224,8 @@ progress {
 .form-control {
   display: block;
   width: 100%;
-  padding: 0.375rem 0.75rem;
+  padding: 10px;
+  margin-bottom: 20px;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -2236,6 +2238,7 @@ progress {
   appearance: none;
   border-radius: 0.25rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  align-items: left;
 }
 @media (prefers-reduced-motion: reduce) {
   .form-control {
@@ -4539,6 +4542,7 @@ textarea.form-control-lg {
   border-radius: 0.5em;
   padding: 20px;
   text-align: left;
+  align-items: left;
 }
 .card > hr {
   margin-right: 0;
@@ -4570,6 +4574,7 @@ textarea.form-control-lg {
 
 .card-title {
   margin-bottom: 0.5rem;
+  text-align: left;
 }
 
 .card-subtitle {
@@ -4590,6 +4595,7 @@ textarea.form-control-lg {
   margin-bottom: 0;
   background-color: rgba(0, 0, 0, 0.03);
   border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+  text-align: left;
 }
 .card-header:first-child {
   border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0;
