--- a/frontend/todo-app/src/App.css
+++ b/frontend/todo-app/src/App.css
@@ -1,9 +1,10 @@
 .footer {
-  position: fixed;
-  bottom: 0px;
+  position: absolute;
+  bottom: -1;
   width: 100%;
-  height: 50px;
+  height: auto!important;
   background-color: #222222;
+
 }
 
 .App {
