--- a/frontend/todo-app/src/Bootstrap.css
+++ b/frontend/todo-app/src/Bootstrap.css
@@ -2233,8 +2233,9 @@ progress {
 .form-control {
   display: block;
   width: 100%;
-  padding: 0.375rem 0.75rem;
-  font-size: 1rem;
+padding: 10px;  
+margin-bottom: 10px;
+font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
